--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SQLite Sandbox</title>
+    <title>SQLime</title>
     <link rel="icon" href="favicon.svg">
     <link rel="stylesheet" href="sandbox.css">
 </head>
@@ -13,12 +13,13 @@
 <body>
     <div class="grid">
         <header class="header">
-            <strong>SQLite Sandbox</strong> //
-            <strong id="db-name"></strong>
+            <strong>🍋 SQLite Sandbox</strong> //
+            <strong id="db-name">loading...</strong>
             <div class="toolbar">
                 <button id="execute">run sql</button>
                 <button id="clear">clear</button>
                 <button id="open-url">open url</button>
+                <!-- <a href="about.html">?</a> -->
             </div>
         </header>
         <section class="editor-section">
