sandbox: save as gist

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -19,6 +19,7 @@
                 <button id="execute">run sql</button>
                 <button id="clear">clear</button>
                 <button id="open-url">open url</button>
+                <button id="save" style="display: none;">save</button>
                 <!-- <a href="about.html">?</a> -->
             </div>
         </header>
