sandbox: toolbar styling

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -16,10 +16,10 @@
             <strong>🍋 SQLite Sandbox</strong> //
             <strong id="db-name">loading...</strong>
             <div class="toolbar">
-                <button id="execute" class="button-small">run sql</button>
-                <button id="clear" class="button-small">clear</button>
+                <button id="execute" class="button-small">run ►</button>
+                <button id="clear" class="button-small hidden">clear</button>
                 <button id="open-url" class="button-small">open url</button>
-                <button id="save" class="button-small">save</button>
+                <button id="save" class="button-small">share ☆</button>
                 <!-- <a href="about.html">?</a> -->
             </div>
         </header>
