--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -19,6 +19,9 @@
                 <button id="execute" class="button-small">run ►</button>
                 <button id="clear" class="button-small hidden">clear</button>
                 <button id="open-url" class="button-small">open url</button>
+                <label class="button-small">
+                    open file <input type="file" id="open-file">
+                </label>
                 <button id="save" class="button-small">share ☆</button>
                 <!-- <a href="about.html">?</a> -->
             </div>
