--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -13,11 +13,12 @@
 <body>
     <div class="grid">
         <header class="header">
-            <strong>🍋 SQLite Sandbox</strong> //
+            <a href="./" class="link-img">🍋</a>
+            <strong>SQLite Sandbox</strong> //
             <strong id="db-name">loading...</strong>
             <div class="toolbar">
                 <button id="execute" class="button-small">run ►</button>
-                <button id="clear" class="button-small">clear ✘</button>
+                <button id="clear" class="button-small hidden">clear ✘</button>
                 <button id="open-url" class="button-small">open url</button>
                 <label class="button-small">
                     open file <input type="file" id="open-file">
