--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -13,9 +13,11 @@
 <body>
     <div class="grid">
         <header class="header">
-            <a href="./" class="link-img">🍋</a>
-            <strong>SQLite Sandbox</strong> //
-            <strong id="db-name">loading...</strong>
+            <h1>
+                <a href="./" class="link-img">🍋</a>
+                <strong>SQLite Sandbox</strong> //
+                <strong id="db-name">loading...</strong>
+            </h1>
             <div class="toolbar">
                 <button id="execute" class="button-small">run ►</button>
                 <button id="clear" class="button-small hidden">clear ✘</button>
@@ -24,6 +26,7 @@
                     open file <input type="file" id="open-file">
                 </label>
                 <button id="save" class="button-small">share ☆</button>
+                <a href="settings.html" class="button-small">✎ settings</a>
                 <!-- <a href="about.html">?</a> -->
             </div>
         </header>
