--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -20,12 +20,12 @@
             </h1>
             <div class="toolbar">
                 <button id="execute" class="button-small">run ►</button>
-                <button id="clear" class="button-small hidden">clear ✘</button>
-                <button id="open-url" class="button-small">open url</button>
-                <label class="button-small">
+                <button id="clear" class="button-small hidden">✘ clear</button>
+                <label class="button-small hidden-mobile">
                     open file <input type="file" id="open-file">
                 </label>
-                <button id="save" class="button-small">share ☆</button>
+                <button id="open-url" class="button-small">open url</button>
+                <button id="save" class="button-small">☆ share</button>
                 <a href="settings.html" class="button-small">✎ settings</a>
                 <!-- <a href="about.html">?</a> -->
             </div>
