--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -27,7 +27,7 @@
                 <button id="open-url" class="button-small">open url</button>
                 <button id="save" class="button-small">☆ share</button>
                 <a href="settings.html" class="button-small">✎ settings</a>
-                <!-- <a href="about.html">?</a> -->
+                <a href="about.html" class="button-round">?</a>
             </div>
         </header>
         <section class="editor-section">
