--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -21,13 +21,13 @@
             <div class="toolbar">
                 <button id="execute" class="button-small">run ►</button>
                 <button id="clear" class="button-small hidden">✘ clear</button>
-                <label class="button-small hidden-mobile">
+                <label class="button-small hidden">
                     open file <input type="file" id="open-file">
                 </label>
-                <button id="open-url" class="button-small">open url</button>
-                <button id="save" class="button-small">☆ share</button>
-                <a href="settings.html" class="button-small">✎ settings</a>
-                <a href="about.html" class="button-round">?</a>
+                <button id="open-url" class="button-small hidden">open url</button>
+                <button id="save" class="button-small hidden">☆ share</button>
+                <a href="settings.html" class="button-small hidden">✎ settings</a>
+                <a href="about.html" class="button-round hidden">?</a>
             </div>
         </header>
         <section class="editor-section">
